force-app/main/default/objects/BGR_SettingLimits__c/BGR_SettingLimits__c.object-meta.xml
<CustomObject>
    <label>BGR SettingLimits</label>
    <nameField>
        <label>BGR SettingLimits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SettingLimits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>