force-app/main/default/objects/BGR_SettingLimits__c/fields/SERVICE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE__c</fullName>
    <label>SERVICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>