force-app/main/default/objects/BGR_SettingLimits__c/fields/SETTINGLL__c.field-meta.xml
<CustomField>
    <fullName>SETTINGLL__c</fullName>
    <label>SETTINGLL</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>