force-app/main/default/objects/BGR_SettingLimits__c/fields/Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Size_Code__c</fullName>
    <label>Size Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>