force-app/main/default/objects/BGR_SettingLimits__c/fields/SUPPLYPRESSURELL__c.field-meta.xml
<CustomField>
    <fullName>SUPPLYPRESSURELL__c</fullName>
    <label>SUPPLYPRESSURELL</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>