force-app/main/default/objects/BGR_SettingLimits__c/fields/SUPPLYPRESSUREUL__c.field-meta.xml
<CustomField>
    <fullName>SUPPLYPRESSUREUL__c</fullName>
    <label>SUPPLYPRESSUREUL</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>